Fix code block display on small screens

--- a/src/assets/css/media-queries.css
+++ b/src/assets/css/media-queries.css
@@ -10,9 +10,9 @@
     width: 95vw;
   }
 
-  pre[class^=language-] {
-    width: 100%;
-    margin-left: 0;
+  .code--block {
+    width: 100vw;
+    margin-left: -2.5vw !important; /* Prism JS override */
   }
 
   .image--medium {
